--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,46 @@
-== README
+#EAT AND RUN
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Eat and Run is an API that takes two basic parameters: the food you want to eat and your location
+The app will then return relevant options for nearby trails where you can burn off the calories.
 
-Things you may want to cover:
+The vision for an app's UI would be: a glossy picture of the cupcake you want to eat, next to a snapshot of a leafy local trail.  Now working off your food isn't a chore...it is as enticing as your meal.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+We will utilize two APIs:
+Nutritionix  https://www.mashape.com/msilverman/nutritionix-nutrition-database
+TrailAPI  https://www.mashape.com/trailapi/trailapi
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+#MINIMUM VIABLE PRODUCT
+
+-User enters
+FOOD: "cheesecake"
+CITY: "Durham"
+
+-API returns
+
+Food:"Cheesecake" &&&Food name of closest matching food:first data field
+Calories:"536"  &&&Calorie #:second data field
+
+Trails:"Little River Regional Park" &&&Trail list:third data field
+       "Duke Forest"
+       "Eno River State Park"
+
+
+#NEXT LEVEL
+
+Same parameters, but gives you basic information about your exercise plan
+
+Walk [number] miles/Spend [number] hours on the trail ***just doing some math with calories and walking
+
+Lists length of each trail &&&Length:fourth data field
+Lists activities associated with each trail &&&Activities:fifth data fields
+Lists current temp/precipitation &&&Temp and Precip:sixth and seventh data fields
+
+#WISHLIST FOR AFTER THAT
+
+-User can choose activity: walking, running, or biking
+-User can enter personal information for better calorie calculation
+-User can enter zip code, which would get translated into approx. lat/long, which would allow them to specify a certain radius for how far they were willing to travel
+-Trail API would return associated pictures; another API would provide food images
+-Connect with restaurant API to give restaurant recommendations
+-Could show maps
